@@ -20,7 +20,7 @@ import TAT
 import tetragono as tet
 
 
-def abstract_state(L1, L2, t, U, mu):
+def abstract_state(L1, L2, t, U, mu, side=1):
     """
     Create density matrix of Hubbard model state.
 
@@ -32,7 +32,11 @@ def abstract_state(L1, L2, t, U, mu):
         Hubbard model parameters.
     mu : float
         The chemical potential.
+    side : 1 | 2, default=1
+        The Hamiltonian should apply to single side or both side of density matrix.
     """
+    if side not in [0, 1]:
+        raise RuntimeError("side should be either 1 or 2")
     state = tet.AbstractState(TAT.Fermi.D.Tensor, L1, L2)
     state.total_symmetry = 0
     for l1 in range(L1):
@@ -45,14 +49,14 @@ def abstract_state(L1, L2, t, U, mu):
     CSCS = tet.common_tensor.Fermi_Hubbard.CSCS.to(float)
     single_site = U * NN - mu * (N0 + N1)
     tCC = -t * CSCS
-    for orbit in [0, 1]:
+    for layer in range(side):
         for l1 in range(L1):
             for l2 in range(L2):
-                state.hamiltonians[(l1, l2, orbit),] = single_site
+                state.hamiltonians[(l1, l2, layer),] = single_site
                 if l1 != 0:
-                    state.hamiltonians[(l1 - 1, l2, orbit), (l1, l2, orbit)] = tCC
+                    state.hamiltonians[(l1 - 1, l2, layer), (l1, l2, layer)] = tCC
                 if l2 != 0:
-                    state.hamiltonians[(l1, l2 - 1, orbit), (l1, l2, orbit)] = tCC
+                    state.hamiltonians[(l1, l2 - 1, layer), (l1, l2, layer)] = tCC
     return state
 
 
